--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Ayush, ayush24k, ayushanshu, 24klab, 24klab website">
     <meta name="author" content="Ayush Anshu">
     <link rel="stylesheet" href="global.css">
-    <link rel="icon" href="assets/profile.png" type="image/x-icon">
+    <link rel="icon" href="assets/24klab.jpg" type="image/x-icon">
     <title>Document</title>
 </head>
 <body>
@@ -24,32 +24,32 @@
             <section>
                 <p class="subheading">24klab:</p>
                 <p>> links 
-                    <a href="" target="_blank" class="subheading"> github</a>
-                    <a href="" target="_blank" class="subheading"> twitter</a>
+                    <a href="https://github.com/24klab" target="_blank" class="subheading"> github</a>
+                    <a href="https://twitter.com/24klab" target="_blank" class="subheading"> twitter</a>
                     <a href="" target="_blank" class="subheading"> discord</a>
                 </p>
             </section>
             
             <section>
                 <p class="subheading">drops: </p>
-                <p>> 00.00.00 <a href="" target="_blank" class="subheading"> aiml notes</a></p>
+                <p>> 00.00.00 <a href="" target="_blank" class="subheading"> placeholder</a></p>
             </section>
 
             <section>
                 <p class="subheading">projects: </p>
-                <p>> chat app placeholder <a href="" target="_blank" class="subheading">view</a> <a href="" target="_blank" class="subheading">github</a></p>
+                <p>> placeholder <a href="" target="_blank" class="subheading">view</a> <a href="" target="_blank" class="subheading">github</a></p>
             </section>
 
             <section>
                 <p class="subheading">announcements: </p>
-                <p>> 00.00.00 <a href="" target="_blank" class="subheading">launched</a></p>
+                <p>> 11.01.2024 <a href="https://twitter.com/24klabxyz/status/1745487731268980739?t=FbqekIlvc9IL3SJZoXBHLQ&s=19" target="_blank" class="subheading">launched</a></p>
             </section>
 
             <section>
                 <p class="subheading">team: </p>
-                <p class="ayush24k">> ayush24k <a href="" target="_blank" class="subheading">github</a> 
-                    <a href="" target="_blank" class="subheading">twitter</a>
-                    <a href="" target="_blank" class="subheading">website</a>
+                <p class="ayush24k">> ayush24k <a href="https://github.com/ayush24k" target="_blank" class="subheading">github</a> 
+                    <a href="https://twitter.com/ayushanshuu" target="_blank" class="subheading">twitter</a>
+                    <a href="https://ayushanshu.com" target="_blank" class="subheading">website</a>
                 </p>
             </section>
         </div>
